packages rearranged to support module structure better travis and cobertura support added to .travis.yml